# RustyMario

./: AndroidManifest.xml  Cargo.toml  README.md
.cargo/: config.toml
src/: build.rs  enemy.rs  explosion.rs  main.rs  map.rs  player.rs
